# esp32-rust-c-hid-example

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flash.sh  sdkconfig.defaults
.cargo/: config.toml
components/c_example/: CMakeLists.txt  c_example.c
components/c_example/include/: c_example.h
components/tinyusb_bridge/: CMakeLists.txt  tinyusb_bridge.c
crates/esp-remote-log/: Cargo.toml
crates/esp-remote-log/src/: lib.rs
crates/firmware/: Cargo.toml  build.rs
crates/firmware/components/tinyusb_bridge/: tinyusb_bridge.c
crates/firmware/components/tinyusb_bridge/include/: tinyusb_bridge.h
crates/firmware/src/: main.rs  tinyusb_hid.rs
src/: c_example.rs  main.rs  protocol.rs  tinyusb_hid.rs
