[workspace]
# Declare this as its own workspace so it stays isolated from any parent
# Cargo workspace when used as a starting point inside a larger repo.

[package]
name = "esp32-s3-hid-example"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "esp32-s3-hid-example"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-sys = "0.37.2"
esp-idf-svc = { version = "0.52.1", features = ["critical-section"] }

[build-dependencies]
embuild = "0.33"

# Tell embuild to compile local C components under components/.
# To add a remote component from the ESP-IDF Component Registry, add a second
# [[package.metadata.esp-idf-sys.extra_components]] block:
#
#   [[package.metadata.esp-idf-sys.extra_components]]
#   remote_component = { name = "espressif/some_component", version = "^1.0.0" }
[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components"]
